--- a/resources/package.json
+++ b/resources/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "bootstrap": "3",
+    "jquery": "^3.1.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
